# move_base_clients

./: CMakeLists.txt  README.md  package.xml
cfg/: MoveBaseClientNodecfg.cfg
html/: web_nav.html
include/move_base_clients/: MoveBaseClientNode.h
launch/: move_base_clients.launch
scripts/: client.py  client_with_smach.py  publish_point.py
src/: MoveBaseClientNode.cpp  client_with_class.cpp  simple_client.cpp
